-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
52781f2a7d4c63990c2484b267614450f80c5591
Run the attached app. Undock the widget. It becomes empty. Then redock it inside the window: it is rendered correctly again.
Not setting AA_ShareOpenGLContexts results in a crash. The app derives form the 4_0_core version functions and it is not correctly reinitialized when the QOpenGLWidget changes its context.
Setting AA_ShareOpenGLContexts avoids this but then we get empty content.
For Gerrit Dashboard: QTBUG-45199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109314,4 | Make versioned OpenGL functions working with the subclass pattern | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |