src/gui/opengl/qopenglversionfunctions.h
@@ -4,6 +4,7 @@ DECL|enumerator|InvalidStatus
 DECL|enum|OpenGLStatus
 DECL|function|QOpenGLVersionStatus
 DECL|function|QOpenGLVersionStatus
+DECL|function|get
 DECL|function|operator
 DECL|function|operator
 DECL|macro|QOPENGLVERSIONFUNCTIONS_H
@@ -11,4 +12,5 @@ DECL|macro|QOPENGL_DEPRECATEDFUNCTION
 DECL|member|status
 DECL|member|version
 DECL|struct|QOpenGLVersionStatus
+DECL|variable|QAbstractOpenGLFunctions
 DECL|variable|QOpenGLContext
